DX: remove sort-lines VSCode extension
Already possible with VSCode built-in functionality

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -20,7 +20,6 @@
     "stkb.rewrap",
     "streetsidesoftware.code-spell-checker",
     "tamasfe.even-better-toml",
-    "tyriar.sort-lines",
     "yzhang.markdown-all-in-one"
   ],
   "unwantedRecommendations": [
@@ -30,6 +29,7 @@
     "ms-python.flake8",
     "ms-python.isort",
     "ms-python.pylint",
-    "travisillig.vscode-json-stable-stringify"
+    "travisillig.vscode-json-stable-stringify",
+    "tyriar.sort-lines"
   ]
 }
