--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -30,7 +30,7 @@ vscode:
     - ms-vsliveshare.vsliveshare
     - redhat.vscode-yaml
     - ryanluker.vscode-coverage-gutters
-    - Soulcode.vscode-unwanted-extensions
+    - soulcode.vscode-unwanted-extensions
     - stkb.rewrap
     - streetsidesoftware.code-spell-checker
     - tamasfe.even-better-toml
