ENH: allow `PLC2701` in tests
https://docs.astral.sh/ruff/rules/import-private-name/

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -315,6 +315,7 @@ split-on-trailing-comma = false
     "D",
     "INP001",
     "PGH001",
+    "PLC2701",
     "PLR0913",
     "PLR2004",
     "PLR6301",
