--- a/pyproject.toml
+++ b/pyproject.toml
@@ -192,6 +192,7 @@ exclude = [
     "**/__pycache__",
     "**/_build",
 ]
+reportArgumentType = false
 reportGeneralTypeIssues = false
 reportIncompatibleMethodOverride = false
 reportMissingParameterType = false
@@ -200,6 +201,7 @@ reportMissingTypeStubs = false
 reportOverlappingOverload = false
 reportPrivateImportUsage = false
 reportPrivateUsage = false
+reportReturnType = false
 reportUnboundVariable = false
 reportUnknownArgumentType = false
 reportUnknownLambdaType = false
