MAINT: apply new `black` and `pyright` rules (#300)
* ENH: allow `PLC2701` in tests
  https://docs.astral.sh/ruff/rules/import-private-name/
* MAINT: address Pyright linting issues
* MAINT: apply new `black` formatting of v24.1
* MAINT: autoupdate pre-commit hooks

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -192,6 +192,7 @@ exclude = [
     "**/__pycache__",
     "**/_build",
 ]
+reportArgumentType = false
 reportGeneralTypeIssues = false
 reportIncompatibleMethodOverride = false
 reportMissingParameterType = false
@@ -200,6 +201,7 @@ reportMissingTypeStubs = false
 reportOverlappingOverload = false
 reportPrivateImportUsage = false
 reportPrivateUsage = false
+reportReturnType = false
 reportUnboundVariable = false
 reportUnknownArgumentType = false
 reportUnknownLambdaType = false
@@ -315,6 +317,7 @@ split-on-trailing-comma = false
     "D",
     "INP001",
     "PGH001",
+    "PLC2701",
     "PLR0913",
     "PLR2004",
     "PLR6301",
