--- a/pyproject.toml
+++ b/pyproject.toml
@@ -212,6 +212,10 @@ src = [
 ]
 target-version = "py37"
 
+[tool.ruff.format]
+docstring-code-format = true
+line-ending = "lf"
+
 [tool.ruff.lint]
 extend-select = [
     "A",
