ENH: load TOML with `rtoml` if read-only

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,7 +31,8 @@ dependencies = [
     "pip-tools",
     "pre-commit",
     "ruamel.yaml", # better YAML dumping
-    "tomlkit",
+    "tomlkit", # preserve original TOML formatting
+    'rtoml', # fast, read-only parsing
     'typing-extensions; python_version <"3.12.0"', # override
 ]
 description = "Pre-commit hooks that ensure that ComPWA repositories have a similar developer set-up"
