--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -70,7 +70,8 @@
     "src/compwa_policy/.github/workflows/pr-linting.yml": true,
     "src/compwa_policy/.github/workflows/release-drafter.yml": true,
     "src/compwa_policy/.template/.gitpod.yml": true,
-    "src/compwa_policy/.template/.prettierrc": true
+    "src/compwa_policy/.template/.prettierrc": true,
+    "tests/**/.pre-commit-config*.yaml": true
   },
   "telemetry.telemetryLevel": "off",
   "yaml.schemas": {
