FIX: update tests

--- a/tests/check_dev_files/readthedocs/.readthedocs-good.yml
+++ b/tests/check_dev_files/readthedocs/.readthedocs-good.yml
@@ -6,5 +6,4 @@ build:
   jobs:
     post_install:
       - curl -LsSf https://astral.sh/uv/install.sh | sh
-      - source $HOME/.cargo/env
-      - uv pip install --system -e .[doc]
+      - /home/docs/.cargo/bin/uv pip install --system -e .[doc]
