ENH: ignore untracked files in cspell check

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,7 @@ dependencies = [
     "html2text",
     "ini2toml",
     "nbformat",
+    "pathspec",
     "pip-tools",
     "ruamel.yaml", # better YAML dumping
     "tomlkit", # preserve original TOML formatting
