FIX: wrap readthedocs pip install line

--- a/tests/check_dev_files/readthedocs/.readthedocs-good.yml
+++ b/tests/check_dev_files/readthedocs/.readthedocs-good.yml
@@ -6,4 +6,5 @@ build:
   jobs:
     post_install:
       - curl -LsSf https://astral.sh/uv/install.sh | sh
-      - /home/docs/.cargo/bin/uv pip install --system -e .[doc]
+      - |-
+        /home/docs/.cargo/bin/uv pip install --system -e .[doc]
