--- a/tests/check_dev_files/readthedocs/extend/.readthedocs-good.yml
+++ b/tests/check_dev_files/readthedocs/extend/.readthedocs-good.yml
@@ -5,9 +5,8 @@ build:
     python: "3.9"
   jobs:
     post_install:
-      - curl -LsSf https://astral.sh/uv/install.sh | sh
-      - |-
-        /home/docs/.cargo/bin/uv pip install --system -e .[doc]
+      - python -m pip install 'uv>=0.2.0'
+      - python -m uv pip install -e .[doc]
       - |
         wget https://julialang-s3.julialang.org/bin/linux/x64/1.9/julia-1.9.2-linux-x86_64.tar.gz
       - tar xzf julia-1.9.2-linux-x86_64.tar.gz
