--- a/tests/check_dev_files/readthedocs/overwrite/.readthedocs-good.yml
+++ b/tests/check_dev_files/readthedocs/overwrite/.readthedocs-good.yml
@@ -5,6 +5,5 @@ build:
     python: "3.9"
   jobs:
     post_install:
-      - curl -LsSf https://astral.sh/uv/install.sh | sh
-      - |-
-        /home/docs/.cargo/bin/uv pip install --system -e .[doc]
+      - python -m pip install 'uv>=0.2.0'
+      - python -m uv pip install -e .[doc]
