--- a/pyproject.toml
+++ b/pyproject.toml
@@ -193,6 +193,7 @@ addopts = [
 filterwarnings = [
     "error",
     "ignore: Importing ErrorTree directly from the jsonschema package is deprecated.*",
+    "ignore: The `hash` argument is deprecated in favor of `unsafe_hash` and will be removed in or after August 2025.:DeprecationWarning",
 ]
 markers = ["slow: marks tests as slow (deselect with '-m \"not slow\"')"]
 testpaths = [
@@ -215,40 +216,11 @@ docstring-code-format = true
 line-ending = "lf"
 
 [tool.ruff.lint]
-extend-select = [
-    "A",
-    "B",
-    "BLE",
-    "C4",
-    "C90",
-    "D",
-    "EM",
-    "ERA",
-    "FA",
-    "I",
-    "ICN",
-    "INP",
-    "ISC",
-    "N",
-    "NPY",
-    "PGH",
-    "PIE",
-    "PL",
-    "Q",
-    "RET",
-    "RSE",
-    "RUF",
-    "S",
-    "SIM",
-    "T20",
-    "TCH",
-    "TID",
-    "TRY",
-    "UP",
-    "YTT",
-]
 ignore = [
+    "ANN401",
     "C408",
+    "COM812",
+    "CPY001",
     "D101",
     "D102",
     "D103",
@@ -258,15 +230,24 @@ ignore = [
     "D213",
     "D407",
     "D416",
+    "DOC",
     "E501",
+    "FBT",
+    "FURB101",
+    "FURB103",
+    "FURB140",
+    "G004",
     "ISC001",
     "PLR0913",
     "PLW1514",
     "PLW2901",
+    "PT001",
+    "PTH",
     "S301",
     "SIM108",
     "UP036",
 ]
+select = ["ALL"]
 task-tags = ["cspell"]
 
 [tool.ruff.lint.flake8-tidy-imports]
@@ -287,14 +268,15 @@ split-on-trailing-comma = false
 "docs/conf.py" = ["D100"]
 "setup.py" = ["D100"]
 "tests/*" = [
+    "ANN",
     "D",
     "INP001",
     "PGH001",
     "PLC2701",
-    "PLR0913",
     "PLR2004",
     "PLR6301",
     "S101",
+    "SLF001",
     "T20",
 ]
 
