ENH: support `pixi` and `venv` in `.envrc`

--- a/.envrc
+++ b/.envrc
@@ -1,1 +1,7 @@
-layout anaconda
+if [ -e .venv ]; then
+  source .venv/bin/activate
+elif [ -e venv ]; then
+  source venv/bin/activate
+else
+  layout anaconda
+fi
