DX: install `pip` packages in `.venv`

--- a/.envrc
+++ b/.envrc
@@ -1,4 +1,5 @@
 if [ -e .venv ]; then
+  uv pip install --editable '.[dev]' --quiet
   source .venv/bin/activate
 elif [ -e venv ]; then
   source venv/bin/activate
