--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -22,6 +22,7 @@ vscode:
     - executablebookproject.myst-highlight
     - github.vscode-github-actions
     - github.vscode-pull-request-github
+    - mhutchie.git-graph
     - ms-python.mypy-type-checker
     - ms-python.python
     - ms-python.vscode-pylance
