DX: remove gitpod config

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -52,6 +52,7 @@ repos:
         args:
           - --allow-labels
           - --dependabot=update
+          - --no-gitpod
           - --no-notebooks
           - --no-prettierrc
           - --no-pypi
