--- a/src/compwa_policy/.template/.gitpod.yml
+++ b/src/compwa_policy/.template/.gitpod.yml
@@ -1,1 +1,17 @@
-../../../.gitpod.yml
+tasks:
+  - init: pyenv local 3.9
+  - init: pip install -e .[dev]
+
+github:
+  prebuilds:
+    master: true
+    branches: false
+    pullRequests: true
+    pullRequestsFromForks: true
+    addComment: false
+    addBadge: false
+    addLabel: false
+
+vscode:
+  extensions:
+    - charliermarsh.ruff
