--- a/tox.ini
+++ b/tox.ini
@@ -49,22 +49,9 @@ allowlist_externals =
 commands =
   sphinx-autobuild \
     --open-browser \
-    --re-ignore .*/.ipynb_checkpoints/.* \
+    --re-ignore .*.egg-info \
     --re-ignore .*/__pycache__/.* \
-    --re-ignore .*\.gitignore \
-    --re-ignore .*\.tmp \
-    --re-ignore docs/.*\.csv \
-    --re-ignore docs/.*\.gif \
-    --re-ignore docs/.*\.gv \
-    --re-ignore docs/.*\.inv \
-    --re-ignore docs/.*\.json \
-    --re-ignore docs/.*\.pickle \
-    --re-ignore docs/.*\.png \
-    --re-ignore docs/.*\.svg \
-    --re-ignore docs/.*\.yaml \
-    --re-ignore docs/.*\.yml \
     --re-ignore docs/_build/.* \
-    --re-ignore docs/_images/.* \
     --re-ignore docs/api/.* \
     --watch docs \
     --watch src \
