--- a/tox.ini
+++ b/tox.ini
@@ -33,9 +33,10 @@ allowlist_externals =
   sphinx-build
 commands =
   sphinx-build \
+    --builder html \
+    --fail-on-warning \
     --keep-going \
-    -TW \
-    -b html \
+    --show-traceback \
     docs/ docs/_build/html
 description =
   Build documentation and API through Sphinx
@@ -68,9 +69,10 @@ allowlist_externals =
   sphinx-build
 commands =
   sphinx-build \
+    --builder html \
+    --fail-on-warning \
     --keep-going \
-    -TW \
-    -b html \
+    --show-traceback \
     docs/ docs/_build/html
 description =
   Build documentation through Sphinx WITH output of Jupyter notebooks
@@ -85,8 +87,8 @@ allowlist_externals =
   sphinx-build
 commands =
   sphinx-build \
-    -T \
-    -b linkcheck \
+    --builder linkcheck \
+    --show-traceback \
     docs/ docs/_build/linkcheck
 description =
   Check external links in the documentation (requires internet connection)
@@ -114,7 +116,7 @@ allowlist_externals =
   pre-commit
 commands =
   mypy src tests # run separately because of potential caching problems
-  pre-commit run {posargs} -a
+  pre-commit run {posargs} --all-files
 description =
   Perform all linting, formatting, and spelling checks
 setenv =
