--- a/tox.ini
+++ b/tox.ini
@@ -78,6 +78,8 @@ setenv =
   FORCE_COLOR = yes
 
 [testenv:pydeps]
+allowlist_externals =
+  pydeps
 changedir = src
 commands =
   pydeps compwa_policy \
@@ -85,8 +87,6 @@ commands =
     --exclude *._* \
     --max-bacon=1 \
     --noshow
-deps =
-  pydeps
 description =
   Visualize module dependencies
 passenv = *
