--- a/tox.ini
+++ b/tox.ini
@@ -50,10 +50,10 @@ allowlist_externals =
 commands =
   sphinx-autobuild \
     --open-browser \
-    --re-ignore .*.egg-info \
-    --re-ignore .*/__pycache__/.* \
-    --re-ignore docs/_build/.* \
-    --re-ignore docs/api/.* \
+    --re-ignore '.*\.egg-info' \
+    --re-ignore '.*/__pycache__/.*' \
+    --re-ignore 'docs/_build/.*' \
+    --re-ignore 'docs/api/.*' \
     --watch docs \
     --watch src \
     docs/ docs/_build/html
@@ -84,7 +84,7 @@ changedir = src
 commands =
   pydeps compwa_policy \
     -o module_structure.svg \
-    --exclude *._* \
+    --exclude '*._*' \
     --max-bacon=1 \
     --noshow
 description =
