DX: run `mypy` through `pre-commit` in `tox`

--- a/tox.ini
+++ b/tox.ini
@@ -93,12 +93,10 @@ passenv = *
 
 [testenv:sty]
 allowlist_externals =
-  mypy
   pre-commit
 commands =
-  mypy src tests # run separately because of potential caching problems
   pre-commit run {posargs} --all-files
 description =
   Perform all linting, formatting, and spelling checks
 setenv =
-  SKIP = mypy, pyright
+  SKIP = pyright
