FIX: specify Pixi environment name in `.envrc`

--- a/.envrc
+++ b/.envrc
@@ -4,7 +4,7 @@ elif [ -e venv ]; then
   source venv/bin/activate
 elif [ -e .pixi ]; then
   watch_file pixi.lock
-  eval "$(pixi shell-hook)"
+  eval "$(pixi shell-hook --environment compwa-policy)"
 else
   layout anaconda
 fi
