DX: avoid installing `sphinx-autobuild` v2024.4

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -51,6 +51,7 @@ dev = [
     "pydeps",
     "sphinx-autobuild",
     "tox >=1.9", # for skip_install, use_develop
+    'sphinx-autobuild!=2024.4.*; python_version <"3.10.0"',
 ]
 doc = [
     "Sphinx",
