--- a/pyproject.toml
+++ b/pyproject.toml
@@ -166,6 +166,55 @@ compwa-policy = {features = [
     "types",
 ], solve-group = "default"}
 
+[tool.pixi.feature.dev.tasks.ci]
+depends_on = ["coverage", "doc", "linkcheck", "sty"]
+
+[tool.pixi.feature.dev.tasks.cov]
+cmd = """
+pytest \
+    --cov-fail-under=35 \
+    --cov-report=html \
+    --cov-report=xml \
+    --cov=compwa_policy
+"""
+
+[tool.pixi.feature.dev.tasks.doc]
+cmd = """
+sphinx-build \
+    --builder html \
+    --fail-on-warning \
+    --keep-going \
+    --show-traceback \
+    docs/ docs/_build/html
+"""
+
+[tool.pixi.feature.dev.tasks.doclive]
+cmd = """
+sphinx-autobuild \
+    --open-browser \
+    --re-ignore '.*\\..egg-info' \
+    --re-ignore '.*/__pycache__/.*' \
+    --re-ignore 'docs/_build/.*' \
+    --re-ignore 'docs/api/.*' \
+    --watch docs \
+    --watch src \
+    docs/ docs/_build/html
+"""
+
+[tool.pixi.feature.dev.tasks.linkcheck]
+cmd = """
+sphinx-build \
+    --builder linkcheck \
+    --show-traceback \
+    docs/ docs/_build/linkcheck
+"""
+
+[tool.pixi.feature.dev.tasks.sty]
+cmd = "pre-commit run --all-files"
+
+[tool.pixi.feature.dev.tasks.test]
+cmd = "pytest"
+
 [tool.pixi.pypi-dependencies]
 compwa-policy = {path = ".", editable = true}
 
