ENH: switch to `pre-commit-uv`

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -66,7 +66,7 @@ doc = [
 sty = [
     "compwa-policy[types]",
     "mypy",
-    "pre-commit >=1.4.0",
+    "pre-commit-uv",
     "ruff",
 ]
 test = [
