MAINT: move `description` on one line

--- a/tox.ini
+++ b/tox.ini
@@ -12,8 +12,7 @@ allowlist_externals =
   pytest
 commands =
   pytest {posargs}
-description =
-  Run all unit tests
+description = Run all unit tests
 passenv = *
 
 [testenv:cov]
@@ -25,8 +24,7 @@ commands =
     --cov-report=html \
     --cov-report=xml \
     --cov=compwa_policy
-description =
-  Compute test coverage
+description = Compute test coverage
 
 [testenv:doc]
 allowlist_externals =
@@ -38,8 +36,7 @@ commands =
     --keep-going \
     --show-traceback \
     docs/ docs/_build/html
-description =
-  Build documentation and API through Sphinx
+description = Build documentation and API through Sphinx
 
 [testenv:doclive]
 allowlist_externals =
@@ -54,8 +51,7 @@ commands =
     --watch docs \
     --watch src \
     docs/ docs/_build/html
-description =
-  Set up a server to directly preview changes to the HTML pages
+description = Set up a server to directly preview changes to the HTML pages
 
 [testenv:linkcheck]
 allowlist_externals =
@@ -65,15 +61,13 @@ commands =
     --builder linkcheck \
     --show-traceback \
     docs/ docs/_build/linkcheck
-description =
-  Check external links in the documentation (requires internet connection)
+description = Check external links in the documentation (requires internet connection)
 
 [testenv:sty]
 allowlist_externals =
   pre-commit
 commands =
   pre-commit run {posargs} --all-files
-description =
-  Perform all linting, formatting, and spelling checks
+description = Perform all linting, formatting, and spelling checks
 setenv =
   SKIP = pyright
