--- a/tox.ini
+++ b/tox.ini
@@ -63,6 +63,8 @@ commands =
     --show-traceback \
     docs/ docs/_build/linkcheck
 description = Check external links in the documentation (requires internet connection)
+setenv =
+  PYTHONWARNINGS =
 
 [testenv:sty]
 allowlist_externals =
