--- a/tox.ini
+++ b/tox.ini
@@ -32,7 +32,7 @@ allowlist_externals =
   sphinx-build
 commands =
   sphinx-build \
-    --builder html \
+    --builder=html \
     --fail-on-warning \
     --keep-going \
     --show-traceback \
@@ -45,12 +45,12 @@ allowlist_externals =
 commands =
   sphinx-autobuild \
     --open-browser \
-    --re-ignore '.*\.egg-info' \
-    --re-ignore '.*/__pycache__/.*' \
-    --re-ignore 'docs/_build/.*' \
-    --re-ignore 'docs/api/.*' \
-    --watch docs \
-    --watch src \
+    --re-ignore='.*\.egg-info' \
+    --re-ignore='.*/__pycache__/.*' \
+    --re-ignore='docs/_build/.*' \
+    --re-ignore='docs/api/.*' \
+    --watch=docs \
+    --watch=src \
     docs/ docs/_build/html
 description = Set up a server to directly preview changes to the HTML pages
 
@@ -59,7 +59,7 @@ allowlist_externals =
   sphinx-build
 commands =
   sphinx-build \
-    --builder linkcheck \
+    --builder=linkcheck \
     --show-traceback \
     docs/ docs/_build/linkcheck
 description = Check external links in the documentation (requires internet connection)
