FIX: start `sphinx-autobuild` on random available port

--- a/tox.ini
+++ b/tox.ini
@@ -45,6 +45,7 @@ allowlist_externals =
 commands =
   sphinx-autobuild \
     --open-browser \
+    --port=0 \
     --re-ignore='.*\.egg-info' \
     --re-ignore='.*/__pycache__/.*' \
     --re-ignore='docs/_build/.*' \
