MAINT: use `--ignore` instead of `--re-ignore` where possible

--- a/tox.ini
+++ b/tox.ini
@@ -44,12 +44,12 @@ allowlist_externals =
   sphinx-autobuild
 commands =
   sphinx-autobuild \
+    --ignore=docs/_build \
+    --ignore=docs/api \
     --open-browser \
     --port=0 \
     --re-ignore='.*\.egg-info' \
     --re-ignore='.*/__pycache__/.*' \
-    --re-ignore='docs/_build/.*' \
-    --re-ignore='docs/api/.*' \
     --watch=docs \
     --watch=src \
     docs/ docs/_build/html
