--- a/pyproject.toml
+++ b/pyproject.toml
@@ -48,7 +48,6 @@ dev = [
     "compwa-policy[sty]",
     "compwa-policy[test]",
     "labels",
-    "pydeps",
     "sphinx-autobuild",
     "tox >=1.9", # for skip_install, use_develop
     'sphinx-autobuild!=2024.4.*; python_version <"3.10.0"',
@@ -183,9 +182,6 @@ cmd = "tox -e doclive"
 
 [tool.pixi.feature.dev.tasks.linkcheck]
 cmd = "tox -e linkcheck"
-
-[tool.pixi.feature.dev.tasks.pydeps]
-cmd = "tox -e pydeps"
 
 [tool.pixi.feature.dev.tasks.sty]
 cmd = "pre-commit run --all-files"
@@ -344,3 +340,84 @@ sort_first = [
 ]
 spaces_indent_inline_array = 4
 trailing_comma_inline_array = true
+
+[tool.tox]
+legacy_tox_ini = """
+[tox]
+envlist =
+    cov
+    doc
+    linkcheck
+    sty
+skip_install = True
+skip_missing_interpreters = True
+skipsdist = True
+
+[testenv]
+allowlist_externals =
+    pytest
+commands =
+    pytest {posargs}
+description = Run all unit tests
+passenv = *
+
+[testenv:cov]
+allowlist_externals =
+    pytest
+commands =
+    pytest {posargs} \
+        --cov-fail-under=35 \
+        --cov-report=html \
+        --cov-report=xml \
+        --cov=compwa_policy
+description = Compute test coverage
+
+[testenv:doc]
+allowlist_externals =
+    sphinx-build
+commands =
+    sphinx-build \
+        --builder=html \
+        --fail-on-warning \
+        --keep-going \
+        --show-traceback \
+        docs/ docs/_build/html
+description = Build documentation and API through Sphinx
+
+[testenv:doclive]
+allowlist_externals =
+    sphinx-autobuild
+commands =
+    sphinx-autobuild \
+        --ignore=docs/_build \
+        --ignore=docs/api \
+        --open-browser \
+        --port=0 \
+        --re-ignore='.*\\.egg-info' \
+        --re-ignore='.*/__pycache__/.*' \
+        --watch=docs \
+        --watch=src \
+        docs/ docs/_build/html
+description = Set up a server to directly preview changes to the HTML pages
+
+[testenv:linkcheck]
+allowlist_externals =
+    sphinx-build
+commands =
+    sphinx-build \
+        --builder=linkcheck \
+        --show-traceback \
+        docs/ docs/_build/linkcheck
+description = Check external links in the documentation (requires internet connection)
+setenv =
+    PYTHONWARNINGS =
+
+[testenv:sty]
+allowlist_externals =
+    pre-commit
+commands =
+    pre-commit run {posargs} --all-files
+description = Perform all linting, formatting, and spelling checks
+setenv =
+    SKIP = pyright
+"""
