ENH: remove post-version from dynamic version

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -113,7 +113,7 @@ where = ["src"]
 
 [tool.setuptools_scm]
 local_scheme = "no-local-version"
-version_scheme = "post-release"
+version_scheme = "only-version"
 write_to = "src/compwa_policy/version.py"
 
 [tool.coverage.run]
