ENH: create dedicated `.envrc` for `uv`

--- a/.envrc
+++ b/.envrc
@@ -1,5 +1,2 @@
-if [ -e .venv ]; then
-  source .venv/bin/activate
-elif [ -e venv ]; then
-  source venv/bin/activate
-fi
+uv sync --all-extras --quiet
+source .venv/bin/activate
