--- a/pyproject.toml
+++ b/pyproject.toml
@@ -141,6 +141,7 @@ exclude = [
     "**/.mypy_cache",
     "**/.pytest_cache",
     "**/.tox",
+    "**/.venv/",
     "**/__pycache__",
     "**/_build",
 ]
