--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,5 +1,5 @@
 ci:
-  autoupdate_commit_msg: "MAINT: autoupdate pre-commit hooks"
+  autoupdate_commit_msg: "MAINT: update lock files"
   autoupdate_schedule: quarterly
   skip:
     - check-dev-files
