--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "attrs >=20.1.0", # https://www.attrs.org/changelog.html#id82
     "html2text",
     "ini2toml",
+    "jinja2",
     "nbformat",
     "packaging",
     "pathspec",
