FEAT: autoupdate Python version classifiers

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ dependencies = [
     "html2text",
     "ini2toml",
     "nbformat",
+    "packaging",
     "pathspec",
     "pip-tools",
     "rtoml", # fast, read-only parsing
