FEAT: switch to `uv` as default package manager (#424)
* BEHAVIOR: use `uv` as default package manager
* BEHAVIOR: write "MAINT: update lock files" in update PRs
* BREAK: generalize `remove_from_gitignore()`
* BREAK: rename `--package-managers` to `--package-manager`
* DX: extend cSpell ignore path list
* DX: add `uv.lock` pre-commit hook
* DX: automatically remove Pixi support if `pixi` not package manager
* ENH: add `.venv` to Pyright excludes
* ENH: add `uv.lock` to EditorConfig
* ENH: add Pixi and `uv` badge
* ENH: add support for environment variables in `.envrc`
* ENH: automatically update `CONTRIBUTING.md` file
* ENH: create `.python-version` file for dev Python version
* ENH: create dedicated `.envrc` for `uv`
* ENH: do not add `myst-highlight` if unwanted
* ENH: ignore `.prettierrc` check if `.prettierrc.yml` already available
* ENH: only set `python.terminal.activateEnvironment` if Python repo
* ENH: only set `rewrap.wrappingColumn` if Python repo
* ENH: run `uv sync` on Read the Docs
* FEAT: add `none` as --package-managers` choice
* FEAT: implement `pixi+uv` environment manager with `pixi.toml`
* FIX: do not open `pyproject.toml` if not existing
* MAINT: autoupdate pre-commit hooks
* MAINT: split `check_dev_files.pixi` sub-module

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,11 +1,12 @@
 ci:
-  autoupdate_commit_msg: "MAINT: autoupdate pre-commit hooks"
+  autoupdate_commit_msg: "MAINT: update lock files"
   autoupdate_schedule: quarterly
   skip:
     - check-dev-files
     - mypy
     - pyright
     - self-check
+    - uv-lock
 
 repos:
   - repo: meta
@@ -14,14 +15,14 @@ repos:
       - id: check-useless-excludes
 
   - repo: https://github.com/astral-sh/ruff-pre-commit
-    rev: v0.6.3
+    rev: v0.6.9
     hooks:
       - id: ruff
         args: [--fix]
       - id: ruff-format
 
   - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v4.6.0
+    rev: v5.0.0
     hooks:
       - id: check-ast
       - id: check-case-conflict
@@ -79,7 +80,7 @@ repos:
         exclude: (?x)^(labels/.*\.toml)$
 
   - repo: https://github.com/streetsidesoftware/cspell-cli
-    rev: v8.13.3
+    rev: v8.15.1
     hooks:
       - id: cspell
 
@@ -108,3 +109,8 @@ repos:
     rev: v1.1.384
     hooks:
       - id: pyright
+
+  - repo: https://github.com/astral-sh/uv-pre-commit
+    rev: 0.4.20
+    hooks:
+      - id: uv-lock
