--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -33,9 +33,6 @@
   "coverage-gutters.showLineCoverage": true,
   "diffEditor.experimental.showMoves": true,
   "editor.formatOnSave": true,
-  "files.associations": {
-    "**/pixi.lock": "yaml"
-  },
   "files.watcherExclude": {
     "**/*_cache/**": true,
     "**/.eggs/**": true,
@@ -66,7 +63,7 @@
   "ruff.organizeImports": true,
   "search.exclude": {
     "**/tests/**/__init__.py": true,
-    ".constraints/*.txt": true,
+    "**/uv.lock": true,
     ".github/workflows/cd.yml": true,
     ".github/workflows/ci.yml": true,
     ".taplo.toml": true,
