--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "attrs >=20.1.0", # https://www.attrs.org/changelog.html#id82
     "html2text",
     "ini2toml",
+    "jinja2",
     "nbformat",
     "packaging",
     "pathspec",
@@ -134,49 +135,6 @@ module = ["ruamel.*"]
 ignore_missing_imports = true
 module = ["nbformat.*"]
 
-[tool.pixi.project]
-channels = ["conda-forge"]
-platforms = ["linux-64"]
-
-[tool.pixi.activation]
-env = {PRETTIER_LEGACY_CLI = "1"}
-
-[tool.pixi.dependencies]
-python = "3.12.*"
-
-[tool.pixi.environments]
-default = {features = [
-    "dev",
-    "doc",
-    "sty",
-    "test",
-    "types",
-]}
-
-[tool.pixi.feature.dev.tasks.ci]
-depends_on = ["cov", "doc", "linkcheck", "sty"]
-
-[tool.pixi.feature.dev.tasks.cov]
-cmd = "tox -e cov"
-
-[tool.pixi.feature.dev.tasks.doc]
-cmd = "tox -e doc"
-
-[tool.pixi.feature.dev.tasks.doclive]
-cmd = "tox -e doclive"
-
-[tool.pixi.feature.dev.tasks.linkcheck]
-cmd = "tox -e linkcheck"
-
-[tool.pixi.feature.dev.tasks.sty]
-cmd = "pre-commit run --all-files"
-
-[tool.pixi.feature.dev.tasks.tests]
-cmd = "pytest"
-
-[tool.pixi.pypi-dependencies]
-compwa-policy = {path = ".", editable = true}
-
 [tool.pyright]
 exclude = [
     "**/.git",
@@ -184,6 +142,7 @@ exclude = [
     "**/.mypy_cache",
     "**/.pytest_cache",
     "**/.tox",
+    "**/.venv/",
     "**/__pycache__",
     "**/_build",
 ]
