--- a/src/compwa_policy/.github/workflows/requirements.yml
+++ b/src/compwa_policy/.github/workflows/requirements.yml
@@ -19,6 +19,6 @@ on:
 
 jobs:
   requirements:
-    uses: ComPWA/actions/.github/workflows/requirements.yml@v1
+    uses: ComPWA/actions/.github/workflows/lock.yml@v2
     secrets:
       token: ${{ secrets.PAT }}
