--- a/src/compwa_policy/.github/workflows/lock.yml
+++ b/src/compwa_policy/.github/workflows/lock.yml
@@ -13,7 +13,7 @@ on:
     paths:
       - .constraints/py3.*.txt
       - .pre-commit-config.yaml
-      - "**/Manifest.toml"
+      - Manifest.toml
       - pixi.lock
       - uv.lock
   schedule:
